--- a/index.html
+++ b/index.html
@@ -204,27 +204,38 @@ window.addEventListener("DOMContentLoaded", () => {
             </div>
 
             <h1 class="h1-underline"><a href="/experience.html">Experience</a></h1>
-
+            <div class="resume">
+                <h4>Acadia French Club / <em class="resumePlace">Wolfville, NS</em></h4>
+                <p>
+                    <a class="resumeTitle">Vice President / <em class="resumePlace">September 2025 - Present</em></a>
+                </p>
+                <ul>
+                    <li>Assist the president with leading club related activities</li>
+                </ul>
+                <p>
+                    <a class="resumeTitle">VP of Events and Promotions / <em class="resumePlace">August 2025 - September 2025</em></a>
+                </p>
+                <ul>
+                    <li>Assist with promoting the Acadia French Club and recruiting new members (e.g. First Year Club Fair)</li>
+                </ul>
+                <p>
+                    <a class="resumeTitle">VP of Finance / <em class="resumePlace">December 2024 - August 2025</em></a>
+                </p>
+                <ul>
+                    <li>Volunteer at club events</li>
+                </ul>
+            </div>
+            
             <div class="resume">
                 <h4>Intertape Polymer Group / <em class="resumePlace">Truro, NS</em></h4>
                 <p>
                     <a class="resumeTitle"
-                        >Summer Student - Textiles Support / <em class="resumePlace">May 2025 - Present</em></a
+                        >Summer Student - Textiles Support / <em class="resumePlace">May 2025 - August 2025</em></a
                     >
                 </p>
                 <ul>
-                    <li>Produce training videos to be used for onboarding and training employees</li>
+                    <li>Produced training videos to be used for onboarding and training employees</li>
                     <li>Collaborated with experienced employees to create clear and detailed documentation for complex production processes</li>
-                </ul>
-            </div>
-
-            <div class="resume">
-                <h4>Acadia French Club / <em class="resumePlace">Wolfville, NS</em></h4>
-                <p>
-                    <a class="resumeTitle">Treasurer / <em class="resumePlace">December 2024 - Present</em></a>
-                </p>
-                <ul>
-                    <li>Volunteer at club events</li>
                 </ul>
             </div>
 
