--- a/experience.html
+++ b/experience.html
@@ -147,7 +147,8 @@ window.addEventListener("DOMContentLoaded", () => {
                     <a class="resumeTitle">Vice President / <em class="resumePlace">September 2025 - Present</em></a>
                 </p>
                 <ul>
-                    <li>Assist the president with leading club related activities</li>
+                    <li>Assist the president with leading weekly executive meetings</li>
+                    <li>Plan and organize club events (e.g. movie night) with a team of 13 members</li>
                 </ul>
                 <p>
                     <a class="resumeTitle">VP of Events and Promotions / <em class="resumePlace">August 2025 - September 2025</em></a>
@@ -159,7 +160,7 @@ window.addEventListener("DOMContentLoaded", () => {
                     <a class="resumeTitle">VP of Finance / <em class="resumePlace">December 2024 - August 2025</em></a>
                 </p>
                 <ul>
-                    <li>Volunteer at club events</li>
+                    <li>Volunteered at club events</li>
                 </ul>
             </div>
             
@@ -171,7 +172,7 @@ window.addEventListener("DOMContentLoaded", () => {
                     >
                 </p>
                 <ul>
-                    <li>Produced training videos to be used for onboarding and training employees</li>
+                    <li>Produced a series of 15 training videos using Final Cut Pro for onboarding and training employees</li>
                     <li>Collaborated with experienced employees to create clear and detailed documentation for complex production processes</li>
                 </ul>
             </div>
@@ -182,7 +183,7 @@ window.addEventListener("DOMContentLoaded", () => {
                     <a class="resumeTitle">Volunteer / <em class="resumePlace">September 2020 - Present</em></a>
                 </p>
                 <ul>
-                    <li>Livestream and operate audio visual equipment for weekly Sunday services</li>
+                    <li>Broadcast to Facebook Live and operate audio visual equipment for weekly Sunday services</li>
                 </ul>
             </div>
 
@@ -194,7 +195,7 @@ window.addEventListener("DOMContentLoaded", () => {
                     >
                 </p>
                 <ul>
-                    <li>Design eye-catching posters for fundraising events, promoting community engagement</li>
+                    <li>Design eye-catching posters with Canva for fundraising events, promoting community engagement</li>
                     <li>Volunteer at community fundraisers</li>
                 </ul>
             </div>
@@ -205,8 +206,8 @@ window.addEventListener("DOMContentLoaded", () => {
                     <a class="resumeTitle">Assistant Manager / <em class="resumePlace">May 2023 - August 2024</em></a>
                 </p>
                 <ul>
-                    <li>Responsible for creating the monthly work schedule</li>
-                    <li>Training of new staff members</li>
+                    <li>Responsible for creating the monthly work schedule for five team members</li>
+                    <li>Trained new team members (3-5 per summer)</li>
                 </ul>
                 <p>
                     <a class="resumeTitle"
@@ -215,20 +216,17 @@ window.addEventListener("DOMContentLoaded", () => {
                 </p>
                 <ul>
                     <li>Demonstrated knowledge of menu, promotional products, and new flavours</li>
-                    <li>
-                        Responsible for financial activities of the business (e.g. maintaining cash register and making
-                        change, completing end of day sales totals)
-                    </li>
+                    <li>Responsible for taking orders, making change, and counting/calculating end of day totals</li>
                 </ul>
             </div>
 
             <div class="resume">
                 <h4>Student Council / <em class="resumePlace">South Colchester Academy, Brookfield, NS</em></h4>
                 <p>
-                    <a class="resumeTitle">Secretary / <em class="resumePlace">June 2023 - June 2024</em></a>
+                    <a class="resumeTitle">VP of Communications / <em class="resumePlace">June 2023 - June 2024</em></a>
                 </p>
                 <ul>
-                    <li>Maintained meeting records</li>
+                    <li>Maintained meeting records using Google Workspace</li>
                     <li>
                         Maintained an active social media presence on Instagram (<a
                             href="https://www.instagram.com/scawolves/"
@@ -255,16 +253,17 @@ window.addEventListener("DOMContentLoaded", () => {
                     <a class="resumeTitle">Director / <em class="resumePlace">September 2021 - June 2024</em></a>
                 </p>
                 <ul>
-                    <li>Lead setup/operation of equipment at school activities</li>
+                    <li>Led, trained, and mentored a team of approximately 15 students (grades 7-12)</li>
                     <li>
-                        Maintain social media presence on Instagram (<a
+                        Maintained social media presence on Instagram (<a
                             href="https://www.instagram.com/sca.media/"
                             class="resumeLink">
                             <span class="cloneResumeLink">@sca.media</span>
                             <span class="actualResumeLink">@sca.media</span> </a
                         >)
                     </li>
-                    <li>Train and mentor junior team members</li>
+                    <li>Created videos, posters, and additional content using Final Cut Pro, Canva, and Figma</li>
+                    <li>Delivered morning announcements over livestream to approximately 530 students</li>
                 </ul>
                 <p>
                     <a class="resumeTitle"
@@ -272,8 +271,8 @@ window.addEventListener("DOMContentLoaded", () => {
                     >
                 </p>
                 <ul>
-                    <li>Produce daily, live TV news broadcasts</li>
-                    <li>Operate audio and video equipment at school events (e.g. Graduation, Prom)</li>
+                    <li>Produced daily, live TV news broadcasts using OBS and Wirecast</li>
+                    <li>Operated audio, video, and lighting equipment at school events (e.g. Graduation, Prom)</li>
                 </ul>
             </div>
 
@@ -302,7 +301,7 @@ window.addEventListener("DOMContentLoaded", () => {
                 <ul>
                     <li>Created and designed captivating page spreads to cover school activities</li>
                     <li>Interviewed and photographed students around the building</li>
-                    <li>Worked collaboratively in a small group setting</li>
+                    <li>Worked collaboratively with a team of approximately 5 members</li>
                 </ul>
             </div>
 
