--- a/projects.html
+++ b/projects.html
@@ -156,6 +156,20 @@ window.addEventListener("DOMContentLoaded", () => {
           School (1950 - 2003).
         </p>
       </div>
+      <div class="scaArchives">
+        <h4>Storm Days in CCRCE</h4>
+        <p>
+          <a
+            class="smalltext"
+            href="https://stormday.benjaminmacleod.com"
+            title="Storm Days in CCRCE"
+            target="_blank"
+            >stormday.benjaminmacleod.com</a>
+        </p>
+        <p>
+          The CCRCE Storm Day Statistics website is an unofficial collection of cancellations, early dismissals, delayed arrivals, and bussing restrictions from the Colchester region of the Chignecto Central Regional Centre for Education (CCRCE).
+        </p>
+      </div>
 <br>
       <div class="video-div">
         <div class="video-wrapper">
