--- a/card/christmas.html
+++ b/card/christmas.html
@@ -6,7 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Handlee&display=swap" rel="stylesheet">
-        <title>Title</title>
+        <title>Merry Christmas</title>
         <style>
             body {
                 background-color: #eef2e9;
